# tecs

./: tecs.cabal
logisim/: hack.circ
src/Language/TECS/: Located.hs
src/Language/TECS/Deck/: Parser.hs  Syntax.hs  deck-roundtrip.hs
src/Language/TECS/Deck/Parser/: Lexer.x  Tokens.hs
src/Language/TECS/Jack/: Layout.hs  Parser.hs  Syntax.hs  jack-layout.hs  jack-roundtrip.hs  jackc.hs
src/Language/TECS/Jack/Parser/: Lexer.x  Tokens.hs
src/Language/TECS/Jack/ToDeck/: Compile.hs  Layout.hs
test/deck/: mult.deck
